# ai-eng-2

./: CLAUDE.md  README.md
.github/workflows/: ci.yml  pages.yml
agent-harness-guide/: 00-foundations.md  01-bare-harness.md  02-tool-system.md  03-conversation-and-streaming.md  04-real-tools.md  05-permissions-and-safety.md  06-context-management.md  07-subagents-orchestration.md  08-production-harness.md  09-library-reference.md  BEGINNER-NOTES.md  EXERCISES.md  FAQ.md  GLOSSARY.md  LEARNING-PATH.md  README.md  REVISION-BRIEF.md  ROADMAP.md
agent-harness-guide/code/: .gitignore  README.md  pyproject.toml
agent-harness-guide/code/agent_harness/: __init__.py  agent.py  cli.py  config.py  context.py  conversation.py  hooks.py  llm.py  permissions.py  subagents.py  testing.py
agent-harness-guide/code/agent_harness/tools/: __init__.py  base.py  files.py  parallel.py  registry.py  shell.py
agent-harness-guide/code/tests/: conftest.py  test_agent_loop.py  test_context.py  test_tools.py
agent-harness-guide/evals/: README.md  eval_beginner.py  eval_frontend.py  eval_notebooks.py  eval_pedagogy.py  eval_statemachine.py  eval_ux.py  harness.py  run_all.py
agent-harness-guide/notebooks/: 00-foundations.ipynb  00-foundations.py  01-bare-harness.ipynb  01-bare-harness.py  02-tool-system.ipynb  02-tool-system.py  03-conversation-and-streaming.ipynb  03-conversation-and-streaming.py  04-real-tools.ipynb  04-real-tools.py  05-permissions-and-safety.ipynb  05-permissions-and-safety.py  06-context-management.ipynb  06-context-management.py  07-subagents-orchestration.ipynb  (+7 more)
(+102 files in other folders)
