[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness"
version = "0.1.0"
description = "A reference LLM agent harness built on the OpenAI Responses API"
requires-python = ">=3.10"
dependencies = [
    # The Responses API (client.responses.create) was added in openai 1.66.0.
    "openai>=1.66.0",
]

[project.optional-dependencies]
tiktoken = ["tiktoken"]
dev = ["pytest"]
notebooks = ["jupyterlab", "ipykernel", "nbformat", "nbclient", "jupytext"]

[project.scripts]
agent-harness = "agent_harness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_harness*"]
